--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -105,6 +105,18 @@
  year = {2007}
 }
 
+@article{Belkin2003,
+ author = {Belkin, Mikhail and Niyogi, Partha},
+ doi = {10.1162/089976603321780317},
+ journal = {Neural Computation},
+ number = {6},
+ pages = {1373-1396},
+ title = {Laplacian Eigenmaps for Dimensionality Reduction and Data Representation},
+ url = {https://doi.org/10.1162/089976603321780317},
+ volume = {15},
+ year = {2003}
+}
+
 @book{Bhatia1997,
  address = {New York},
  author = {Bhatia, Rajendra},
@@ -114,6 +126,16 @@
  series = {Graduate texts in mathematics},
  title = {Matrix analysis},
  year = {1997}
+}
+
+@book{Biggs1986,
+ author = {Biggs, N. and Lloyd, E.K. and Wilson, R.J.},
+ isbn = {9780198539162},
+ lccn = {76379235},
+ publisher = {Clarendon Press},
+ title = {Graph Theory, 1736-1936},
+ url = {https://books.google.co.uk/books?id=XqYTk0sXmpoC},
+ year = {1986}
 }
 
 @article{Box1958,
@@ -184,6 +206,18 @@ and Li, Xuelong},
  title = {A Review of Tensors and Tensor Signal Processing},
  url = {https://doi.org/10.1007/978-1-84882-299-3_1},
  year = {2009}
+}
+
+@article{Chong2020,
+ author = {Chong, Yanwen and Ding, Yun and Yan, Qing and Pan, Shaoming},
+ doi = {https://doi.org/10.1016/j.neucom.2019.12.130},
+ issn = {0925-2312},
+ journal = {Neurocomputing},
+ pages = {216-230},
+ title = {Graph-based semi-supervised learning: A review},
+ url = {https://doi.org/https://doi.org/10.1016/j.neucom.2019.12.130},
+ volume = {408},
+ year = {2020}
 }
 
 @article{Cichocki2015,
@@ -262,6 +296,20 @@ observed, modeled, and satellite-derived {PM2.5}},
  publisher = {Society for Industrial and Applied Mathematics},
  title = {Applied numerical linear algebra},
  year = {1997}
+}
+
+@article{Dong2015,
+ author = {Dong, Xiaowen and Mavroeidis, Dimitrios and Calabrese, Francesco
+and Frossard, Pascal},
+ journal = {Data Min. Knowl. Discov.},
+ language = {en},
+ month = {September},
+ number = {5},
+ pages = {1374--1405},
+ publisher = {Springer Science and Business Media LLC},
+ title = {Multiscale event detection in social media},
+ volume = {29},
+ year = {2015}
 }
 
 @article{Elias2022,
@@ -354,6 +402,29 @@ observed, modeled, and satellite-derived {PM2.5}},
  title = {A Sweepline Algorithm for Voronoi Diagrams},
  url = {https://doi.org/10.1145/10515.10549},
  year = {1986}
+}
+
+@misc{FRED2023,
+ author = {{Federal Reserve Bank of St. Louis}},
+ howpublished = {\url{ https://fred.stlouisfed.org}},
+ title = {FRED® (Federal Reserve Economic Data) online API. Accessed June 30th, 2023},
+ year = {2023}
+}
+
+@article{Gao2012,
+ author = {Gao, Fuchang and Han, Lixing},
+ doi = {10.1007/s10589-010-9329-3},
+ journal = {Comput. Optim. Appl.},
+ language = {en},
+ month = {January},
+ number = {1},
+ pages = {259--277},
+ publisher = {Springer Science and Business Media LLC},
+ title = {Implementing the {Nelder-Mead} simplex algorithm with adaptive
+parameters},
+ url = {https://doi.org/10.1007/s10589-010-9329-3},
+ volume = {51},
+ year = {2012}
 }
 
 @article{Gerschgorin1931,
@@ -479,6 +550,15 @@ Travis E. Oliphant},
  year = {1952}
 }
 
+@inproceedings{Holmes2008,
+ author = {Holmes, Dawn E. and Jain, Lakhmi C.},
+ booktitle = {Innovations in Bayesian Networks},
+ doi = {10.1007/978-3-540-85066-3_1},
+ title = {Introduction to Bayesian Networks},
+ url = {https://doi.org/10.1007/978-3-540-85066-3_1},
+ year = {2008}
+}
+
 @book{Horn2012,
  author = {Horn, Roger A. and Johnson, Charles R.},
  doi = {10.1017/CBO9781139020411},
@@ -488,6 +568,29 @@ Travis E. Oliphant},
  title = {Matrix Analysis},
  url = {https://doi.org/10.1017/CBO9781139020411},
  year = {2012}
+}
+
+@article{Huang2016,
+ author = {Huang, Weiyu and Goldsberry, Leah and Wymbs, Nicholas F. and Grafton, Scott T. and Bassett, Danielle S. and Ribeiro, Alejandro},
+ doi = {10.1109/JSTSP.2016.2600859},
+ journal = {IEEE Journal of Selected Topics in Signal Processing},
+ number = {7},
+ pages = {1189-1203},
+ title = {Graph Frequency Analysis of Brain Signals},
+ url = {https://doi.org/10.1109/JSTSP.2016.2600859},
+ volume = {10},
+ year = {2016}
+}
+
+@book{Hull2009,
+ author = {Hull, J.},
+ isbn = {9780136015864},
+ lccn = {2008010842},
+ publisher = {Pearson/Prentice Hall},
+ series = {Eastern economy edition},
+ title = {Options, Futures and Other Derivatives},
+ url = {https://books.google.co.uk/books?id=sEmQZoHoJCcC},
+ year = {2009}
 }
 
 @article{Hutchinson1990,
@@ -588,6 +691,20 @@ Travis E. Oliphant},
  url = {https://doi.org/10.1007/S00707-011-0540-9},
  volume = {222},
  year = {2011}
+}
+
+@article{Kearnes2016,
+ author = {Kearnes, Steven and McCloskey, Kevin and Berndl, Marc and Pande,
+Vijay and Riley, Patrick},
+ journal = {J. Comput. Aided Mol. Des.},
+ language = {en},
+ month = {August},
+ number = {8},
+ pages = {595--608},
+ publisher = {Springer Science and Business Media LLC},
+ title = {Molecular graph convolutions: moving beyond fingerprints},
+ volume = {30},
+ year = {2016}
 }
 
 @book{Kelley1995,
@@ -873,6 +990,17 @@ Measuring Ecological Statistics},
  year = {2018}
 }
 
+@book{Ortega2022,
+ author = {Ortega, Antonio},
+ doi = {10.1017/9781108552349},
+ month = {June},
+ place = {Cambridge},
+ publisher = {Cambridge University Press},
+ title = {Introduction to Graph Signal Processing},
+ url = {https://doi.org/10.1017/9781108552349},
+ year = {2022}
+}
+
 @inproceedings{Papandreou2010,
  author = {Papandreou, George and Yuille, Alan L},
  booktitle = {Advances in Neural Information Processing Systems},
@@ -883,6 +1011,18 @@ Measuring Ecological Statistics},
  url = {https://proceedings.neurips.cc/paper/2010/file/d09bf41544a3365a46c9077ebb5e35c3-Paper.pdf},
  volume = {23},
  year = {2010}
+}
+
+@article{Pare2020,
+ author = {Pare, Philip E. and Beck, Carolyn L. and Basar, Tamer},
+ doi = {https://doi.org/10.1016/j.arcontrol.2020.09.003},
+ issn = {1367-5788},
+ journal = {Annual Reviews in Control},
+ pages = {345-360},
+ title = {Modeling, estimation, and analysis of epidemics over networks: An overview},
+ url = {https://doi.org/https://doi.org/10.1016/j.arcontrol.2020.09.003},
+ volume = {50},
+ year = {2020}
 }
 
 @article{Pereyra1973,
@@ -1008,6 +1148,18 @@ green bond instrument returns},
  url = {https://doi.org/10.1137/1.9780898718003},
  urldate = {2023-01-03},
  year = {2003}
+}
+
+@article{Sandryhaila2013,
+ author = {Sandryhaila, Aliaksei and Moura, José M. F.},
+ doi = {10.1109/TSP.2013.2238935},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {7},
+ pages = {1644-1656},
+ title = {Discrete Signal Processing on Graphs},
+ url = {https://doi.org/10.1109/TSP.2013.2238935},
+ volume = {61},
+ year = {2013}
 }
 
 @article{Sayama2016,
@@ -1194,6 +1346,22 @@ and Warmuth, Manfred K.},
  year = {2022}
 }
 
+@inproceedings{Webber2012,
+ address = {New York, NY, USA},
+ author = {Webber, Jim},
+ booktitle = {Proceedings of the 3rd Annual Conference on Systems, Programming, and Applications: Software for Humanity},
+ doi = {10.1145/2384716.2384777},
+ isbn = {9781450315630},
+ location = {Tucson, Arizona, USA},
+ numpages = {2},
+ pages = {217–218},
+ publisher = {Association for Computing Machinery},
+ series = {SPLASH '12},
+ title = {A Programmatic Introduction to Neo4j},
+ url = {https://doi.org/10.1145/2384716.2384777},
+ year = {2012}
+}
+
 @article{Zhang2017,
  author = {Zhang, Zhi-Wu and Jing, Xiao-Yuan and Wang, Tie-Jian},
  journal = {Autom. Softw. Eng.},
@@ -1247,6 +1415,18 @@ multilayer complex systems},
  year = {2023}
 }
 
+@article{Zhou2020,
+ author = {Zhou, Jie and Cui, Ganqu and Hu, Shengding and Zhang, Zhengyan and Yang, Cheng and Liu, Zhiyuan and Wang, Lifeng and Li, Changcheng and Sun, Maosong},
+ doi = {https://doi.org/10.1016/j.aiopen.2021.01.001},
+ issn = {2666-6510},
+ journal = {AI Open},
+ pages = {57-81},
+ title = {Graph neural networks: A review of methods and applications},
+ url = {https://doi.org/https://doi.org/10.1016/j.aiopen.2021.01.001},
+ volume = {1},
+ year = {2020}
+}
+
 @inproceedings{Zhu2003,
  author = {Zhu, Xiaojin and Ghahramani, Zoubin and Lafferty, John},
  booktitle = {Proceedings of the Twentieth International Conference on International Conference on Machine Learning},
@@ -1258,4 +1438,16 @@ multilayer complex systems},
  series = {ICML'03},
  title = {Semi-Supervised Learning Using Gaussian Fields and Harmonic Functions},
  year = {2003}
+}
+
+@inproceedings{Zhu2012,
+ author = {Zhu, Xiaofan and Rabbat, Michael},
+ booktitle = {2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ doi = {10.1109/ICASSP.2012.6288515},
+ number = {},
+ pages = {2865-2868},
+ title = {Graph spectral compressed sensing for sensor networks},
+ url = {https://doi.org/10.1109/ICASSP.2012.6288515},
+ volume = {},
+ year = {2012}
 }
