--- a/Front & Back Matter/title.tex
+++ b/Front & Back Matter/title.tex
@@ -3,7 +3,7 @@
     \begin{center}
     
         \textsc{\LARGE \univname}\\[1.5cm] % University name
-        \textsc{\Large Masters Thesis}\\[0.5cm] % Thesis type
+        \textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
         
         \HRule \\[0.4cm] % Horizontal line
         {\huge \bfseries \ttitle}\\[0.4cm] % Thesis title
@@ -22,7 +22,7 @@
         \end{flushright}
         \end{minipage}\\[3cm]
         
-        \large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
+        \large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of PhD}\\[0.3cm] % University requirement text
         \textit{in the}\\[0.4cm]
         %\groupname\\
         
