--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -26,7 +26,7 @@
 \newcommand{\iif}{\quad \text{if} \quad}
 
 \newcommand{\R}{\mathbb{R}}
-\newcommand*{\vertbar}{\rule[-1ex]{0.5pt}{4.5ex}}
+\newcommand{\vertbar}[3]{\rule[#3 ex]{#2 pt}{#1 ex}}
 \newcommand{\rowvec}[3]{\; \rule[0.3ex]{#2 ex}{#3 pt} \; #1 \; \rule[0.3ex]{#2 ex}{#3 pt} \;}
 
 
