--- a/Setup/packages.tex
+++ b/Setup/packages.tex
@@ -8,7 +8,8 @@
 			booktabs, 
             wrapfig, 
             makecell, 
-            bm}
+            bm, 
+            multicol}
 
 \usepackage[table]{xcolor}
 
@@ -18,3 +19,5 @@
 
 
 \hypersetup{urlcolor=blue, colorlinks=true}	
+
+\setlength{\columnsep}{1cm}
