--- a/Front & Back Matter/quotation.tex
+++ b/Front & Back Matter/quotation.tex
@@ -2,7 +2,9 @@
 
 \null\vfill % Add some space to move the quote down the page a bit
 
-\textit{``Doubt is not a pleasant condition, but certainty is absurd."}
+% \textit{``Cherish those who seek the truth but beware of those who find it."}
+
+\textit{``The more I read, the more I acquire, the more certain I am that I know nothing.''}
 
 \begin{flushright}
 Voltaire
