updated title page

--- a/Front & Back Matter/title.tex
+++ b/Front & Back Matter/title.tex
@@ -12,17 +12,18 @@
         \begin{minipage}{0.4\textwidth}
         \begin{flushleft} \large
         \emph{Author:}\\
-        \href{http://www.johnsmith.com}{\authornames} % Author name - remove the \href bracket to remove the link
+        \authornames % Author name - remove the \href bracket to remove the link
         \end{flushleft}
         \end{minipage}
         \begin{minipage}{0.4\textwidth}
+            \vspace{0.6cm}
         \begin{flushright} \large
-        \emph{Supervisor:} \\
-        \href{http://www.jamessmith.com}{\supname} % Supervisor name - remove the \href bracket to remove the link  
+        \emph{Supervisors:} \\
+        \supname % Supervisor name - remove the \href bracket to remove the link  
         \end{flushright}
         \end{minipage}\\[3cm]
         
-        \large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of PhD}\\[0.3cm] % University requirement text
+        \large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of PhD. }\\[0.3cm] % University requirement text
         \textit{in the}\\[0.4cm]
         %\groupname\\
         
