--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 
 \input{Front & Back Matter/title}
 
-\input{Front & Back Matter/declaration}
+% \input{Front & Back Matter/declaration}
 
 \input{Front & Back Matter/quotation}
 
