--- a/Front & Back Matter/abstract.tex
+++ b/Front & Back Matter/abstract.tex
@@ -4,7 +4,7 @@
 
  {\huge{\textit{Abstract}} \par}{\addtocontents{toc}{\vspace{1em}} 
 
-The Thesis Abstract is written here (and usually kept to just this page). 
+The Thesis Abstract is written here. 
 %The page is kept centered vertically so can expand into the blank space above the title too\ldots
 %
 
