--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -34,6 +34,19 @@
  year = {2023}
 }
 
+@article{Atasoy2016,
+ author = {Atasoy, Selen and Donnelly, Isaac and Pearson, Joel},
+ doi = {10.1038/ncomms10340},
+ journal = {Nature Communications},
+ month = {January},
+ number = {1},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Human brain networks function in connectome-specific harmonic waves},
+ url = {https://doi.org/10.1038/ncomms10340},
+ volume = {7},
+ year = {2016}
+}
+
 @article{Atchinson1980,
  author = {Atchinson, J. and Shen, S.M.},
  doi = {10.1093/biomet/67.2.261},
@@ -81,6 +94,19 @@
  url = {https://doi.org/10.1515/SPMA-2018-0027},
  volume = {6},
  year = {2018}
+}
+
+@article{Bauer2012,
+ author = {Bauer, Frank},
+ doi = {10.1016/j.laa.2012.01.020},
+ issn = {0024-3795},
+ journal = {Linear Algebra and its Applications},
+ number = {11},
+ pages = {4193-4222},
+ title = {Normalized graph Laplacians for directed graphs},
+ url = {https://doi.org/10.1016/j.laa.2012.01.020},
+ volume = {436},
+ year = {2012}
 }
 
 @misc{Baumgardner2015,
@@ -220,6 +246,19 @@ and Li, Xuelong},
  year = {2020}
 }
 
+@article{Chung2005,
+ author = {Chung, Fan},
+ journal = {Ann. Comb.},
+ language = {en},
+ month = {April},
+ number = {1},
+ pages = {1--19},
+ publisher = {Springer Science and Business Media LLC},
+ title = {Laplacians and the cheeger inequality for directed graphs},
+ volume = {9},
+ year = {2005}
+}
+
 @article{Cichocki2015,
  author = {Cichocki, Andrzej and Mandic, Danilo and De Lathauwer, Lieven and Zhou, Guoxu and Zhao, Qibin and Caiafa, Cesar and Phan, Huy Anh},
  doi = {10.1109/MSP.2013.2297439},
@@ -251,6 +290,18 @@ California fires through {BME} space/time data fusion of
 observed, modeled, and satellite-derived {PM2.5}},
  volume = {54},
  year = {2020}
+}
+
+@article{Colonnese2021,
+ author = {Colonnese, Stefania and Petti, Manuela and Farina, Lorenzo and Scarano, Gaetano and Cuomo, Francesca},
+ doi = {10.1109/ACCESS.2021.3119569},
+ journal = {IEEE Access},
+ number = {},
+ pages = {142681-142692},
+ title = {Protein-Protein Interaction Prediction via Graph Signal Processing},
+ url = {https://doi.org/10.1109/ACCESS.2021.3119569},
+ volume = {9},
+ year = {2021}
 }
 
 @article{Cooley1965,
@@ -296,6 +347,20 @@ observed, modeled, and satellite-derived {PM2.5}},
  publisher = {Society for Industrial and Applied Mathematics},
  title = {Applied numerical linear algebra},
  year = {1997}
+}
+
+@article{DeResende2020,
+ author = {DeResende, Bruno Messias and Costa, Luciano da},
+ doi = {10.1063/5.0006891},
+ issn = {1054-1500},
+ journal = {Chaos: An Interdisciplinary Journal of Nonlinear Science},
+ month = {07},
+ number = {7},
+ pages = {073141},
+ title = {{Characterization and comparison of large directed networks through the spectra of the magnetic Laplacian}},
+ url = {https://doi.org/10.1063/5.0006891},
+ volume = {30},
+ year = {2020}
 }
 
 @article{Dong2015,
@@ -411,6 +476,27 @@ and Frossard, Pascal},
  year = {2023}
 }
 
+@inproceedings{Furutani2020,
+ address = {Cham},
+ author = {Furutani, Satoshi
+and Shibahara, Toshiki
+and Akiyama, Mitsuaki
+and Hato, Kunio
+and Aida, Masaki},
+ booktitle = {Machine Learning and Knowledge Discovery in Databases},
+ editor = {Brefeld, Ulf
+and Fromont, Elisa
+and Hotho, Andreas
+and Knobbe, Arno
+and Maathuis, Marloes
+and Robardet, C{\'e}line},
+ isbn = {978-3-030-46150-8},
+ pages = {447--463},
+ publisher = {Springer International Publishing},
+ title = {Graph Signal Processing for Directed Graphs Based on the Hermitian Laplacian},
+ year = {2020}
+}
+
 @article{Gao2012,
  author = {Gao, Fuchang and Han, Lixing},
  doi = {10.1007/s10589-010-9329-3},
@@ -435,6 +521,18 @@ parameters},
  title = {Uber die Abgrenzung der Eigenwerte einer Matrix},
  volume = {7},
  year = {1931}
+}
+
+@inproceedings{Goldsberry2017,
+ author = {Goldsberry, Leah and Huang, Weiyu and Wymbs, Nicholas F. and Grafton, Scott T. and Bassett, Danielle S. and Ribeiro, Alejandro},
+ booktitle = {2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ doi = {10.1109/ICASSP.2017.7952276},
+ number = {},
+ pages = {851-855},
+ title = {Brain signal analytics from graph signal processing perspective},
+ url = {https://doi.org/10.1109/ICASSP.2017.7952276},
+ volume = {},
+ year = {2017}
 }
 
 @article{Gorodnitsky1997,
@@ -484,6 +582,18 @@ parameters},
  url = {https://doi.org/10.1137/S1064827594276552},
  volume = {18},
  year = {1997}
+}
+
+@inproceedings{Guestrin2004,
+ author = {Guestrin, C. and Bodik, P. and Thibaux, R. and Paskin, M. and Madden, S.},
+ booktitle = {Third International Symposium on Information Processing in Sensor Networks, 2004. IPSN 2004},
+ doi = {10.1145/984622.984624},
+ number = {},
+ pages = {1-10},
+ title = {Distributed regression: an efficient framework for modeling sensor network data},
+ url = {https://doi.org/10.1145/984622.984624},
+ volume = {},
+ year = {2004}
 }
 
 @article{Harris2020,
@@ -662,6 +772,19 @@ Travis E. Oliphant},
  url = {https://doi.org/10.1080/10962247.2020.1749731},
  volume = {70},
  year = {2020}
+}
+
+@article{Jha2022,
+ author = {Jha, Kanchan and Saha, Sriparna and Singh, Hiteshi},
+ doi = {10.1038/s41598-022-12201-9},
+ journal = {Scientific Reports},
+ month = {May},
+ number = {1},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Prediction of protein{\textendash}protein interaction using graph neural networks},
+ url = {https://doi.org/10.1038/s41598-022-12201-9},
+ volume = {12},
+ year = {2022}
 }
 
 @article{Ji2019,
@@ -898,6 +1021,18 @@ Measuring Ecological Statistics},
  year = {2001}
 }
 
+@inproceedings{Menoret2017,
+ author = {Menoret, Mathilde and Farrugia, Nicolas and Pasdeloup, Bastien and Gripon, Vincent},
+ booktitle = {2017 IEEE Global Conference on Signal and Information Processing (GlobalSIP)},
+ doi = {10.1109/GlobalSIP.2017.8309033},
+ number = {},
+ pages = {618-622},
+ title = {Evaluating graph signal processing for neuroimaging through classification and dimensionality reduction},
+ url = {https://doi.org/10.1109/GlobalSIP.2017.8309033},
+ volume = {},
+ year = {2017}
+}
+
 @article{Miao2022,
  author = {Miao, Xiaoyu and Jiang, Aimin and Zhu, Yanping and Kwan, Hon Keung},
  doi = {10.1016/j.sigpro.2022.108708},
@@ -964,6 +1099,14 @@ Measuring Ecological Statistics},
  title = {{Networks}},
  url = {https://doi.org/10.1093/oso/9780198805090.001.0001},
  year = {2018}
+}
+
+@misc{ONS2019,
+ author = {{ONS}},
+ howpublished = {\url{https://www.data.gov.uk/dataset/e73c1990-ad5d-4184-8fb1-b474b94918ba/local-authority-districts-december-2019-boundaries-uk-buc}},
+ note = {Accessed: 2023-05-30},
+ title = {Local Authority Districts (December 2019) Boundaries UK BUC},
+ year = {2019}
 }
 
 @article{Orieux2012,
@@ -1048,6 +1191,19 @@ to a low carbon economy: A case study forecasting portfolios of
 green bond instrument returns},
  url = {https://doi.org/10.2139/ssrn.4299196},
  year = {2022}
+}
+
+@article{Puschel2003,
+ author = {Puschel, Markus and Moura, Jos\'{e} M. F.},
+ doi = {10.1137/S009753970139272X},
+ eprint = {https://doi.org/10.1137/S009753970139272X},
+ journal = {SIAM Journal on Computing},
+ number = {5},
+ pages = {1280-1316},
+ title = {The Algebraic Approach to the Discrete Cosine and Sine Transforms and Their Fast Algorithms},
+ url = {https://doi.org/10.1137/S009753970139272X},
+ volume = {32},
+ year = {2003}
 }
 
 @article{Qiu2017,
@@ -1162,6 +1318,18 @@ green bond instrument returns},
  year = {2013}
 }
 
+@article{Sardellitti2017,
+ author = {Sardellitti, Stefania and Barbarossa, Sergio and Lorenzo, Paolo Di},
+ doi = {10.1109/JSTSP.2017.2726979},
+ journal = {IEEE Journal of Selected Topics in Signal Processing},
+ number = {6},
+ pages = {796-811},
+ title = {On the Graph Fourier Transform for Directed Graphs},
+ url = {https://doi.org/10.1109/JSTSP.2017.2726979},
+ volume = {11},
+ year = {2017}
+}
+
 @article{Sayama2016,
  author = {Sayama, Hiroki},
  doi = {10.1016/j.dam.2015.12.006},
@@ -1183,6 +1351,18 @@ green bond instrument returns},
  title = {{Learning with Kernels: Support Vector Machines, Regularization, Optimization, and Beyond}},
  url = {https://doi.org/10.7551/mitpress/4175.001.0001},
  year = {2018}
+}
+
+@article{Shafipour2019,
+ author = {Shafipour, Rasoul and Khodabakhsh, Ali and Mateos, Gonzalo and Nikolova, Evdokia},
+ doi = {10.1109/TSP.2018.2886151},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {4},
+ pages = {946-960},
+ title = {A Directed Graph Fourier Transform With Spread Frequency Components},
+ url = {https://doi.org/10.1109/TSP.2018.2886151},
+ volume = {67},
+ year = {2019}
 }
 
 @article{Shuman2013,
@@ -1229,6 +1409,36 @@ and Warmuth, Manfred K.},
  publisher = {Springer Berlin Heidelberg},
  title = {Kernels and Regularization on Graphs},
  year = {2003}
+}
+
+@book{Sneddon1995,
+ author = {Sneddon, I.N.},
+ isbn = {9780486685229},
+ lccn = {lc95013500},
+ publisher = {Dover Publications},
+ series = {Dover books on mathematics},
+ title = {Fourier Transforms},
+ url = {https://books.google.co.uk/books?id=jhpsLpRRerwC},
+ year = {1995}
+}
+
+@book{Spielman2019,
+ author = {Spielman, Daniel A.},
+ publisher = {Upcoming},
+ title = {Spectral and Algebraic Graph Theory},
+ year = {2019}
+}
+
+@article{Srivastava2023,
+ author = {Srivastava, Divyanshu and Bagler, Ganesh and Kumar, Vibhor},
+ doi = {10.1016/j.physa.2023.128603},
+ issn = {0378-4371},
+ journal = {Physica A: Statistical Mechanics and its Applications},
+ pages = {128603},
+ title = {Graph Signal Processing on protein residue networks helps in studying its biophysical properties},
+ url = {https://doi.org/10.1016/j.physa.2023.128603},
+ volume = {615},
+ year = {2023}
 }
 
 @article{Stanley2020,
@@ -1391,6 +1601,15 @@ multilayer complex systems},
  year = {2018}
 }
 
+@misc{Zhang2021,
+ archiveprefix = {arXiv},
+ author = {Zhang, Xitong and He, Yixuan and Brugnone, Nathan and Perlmutter, Michael and Hirn, Matthew},
+ eprint = {2102.11391},
+ primaryclass = {cs.LG},
+ title = {MagNet: A Neural Network for Directed Graphs},
+ year = {2021}
+}
+
 @misc{Zhang2022,
  author = {Zhang, Songyang and Deng, Qinwen and Ding, Zhi},
  language = {en},
@@ -1451,3 +1670,69 @@ multilayer complex systems},
  volume = {},
  year = {2012}
 }
+
+
+
+@article{chakraborty_data-driven_2019,
+	title = {Data-driven parallelizable traffic incident detection using spatio- temporally denoised robust thresholds},
+	volume = {105},
+	issn = {0968-090X},
+	url = {https://doi.org/10.1016/j.trc.2019.05.034},
+	doi = {10.1016/j.trc.2019.05.034},
+	number = {June},
+	journal = {Transportation Research Part C},
+	author = {Chakraborty, Pranamesh and Hegde, Chinmay and Sharma, Anuj},
+	year = {2019},
+	note = {Publisher: Elsevier},
+	keywords = {Total variation, Bilateral filter, freeway incident detection, Freeway incident detection, MapReduce, Threshold denoising},
+	pages = {81--99},
+	file = {PDF:/home/ed/Zotero/storage/K3FUIUTF/Chakraborty, Hegde, Sharma - 2019 - Data-driven parallelizable traffic incident detection using spatio- temporally denoised robust thres.pdf:application/pdf},
+}
+
+
+@article{chakraborty_trend_2017,
+	title = {Trend {Filtering} in {Network} {Time} {Series} with {Applications} to {Traffic} {Incident} {Detection}},
+	number = {Nips},
+	author = {Chakraborty, Pranamesh},
+	year = {2017},
+	pages = {1--4},
+	file = {PDF:/home/ed/Zotero/storage/NA964DLM/Chakraborty - 2017 - Trend Filtering in Network Time Series with Applications to Traffic Incident Detection.pdf:application/pdf},
+}
+
+@article{XIU2022100342,
+title = {Modelling traffic as multi-graph signals: Using domain knowledge to enhance the network-level passenger flow prediction in metro systems},
+journal = {Journal of Rail Transport Planning & Management},
+volume = {24},
+pages = {100342},
+year = {2022},
+issn = {2210-9706},
+doi = {10.1016/j.jrtpm.2022.100342},
+url = {https://www.sciencedirect.com/science/article/pii/S2210970622000427},
+author = {Xiu, Cong and Sun, Yichen and Peng, Qiyuan},
+keywords = {Traffic forecasting, Deep learning, Multi-graph convolution wavelet network, Spatial-temporal dependence, Metro domain knowledge, Interpretability},
+}
+
+@article{Hasanzadeh2017AGS,
+  title={A Graph Signal Processing Approach For Real-Time Traffic Prediction In Transportation Networks},
+  author={Hasanzadeh, Arman and Liu, Xi and Duffield, Nick G. and Narayanan, Krishna R. and Chigoy, Byron T},
+  journal={arXiv: Signal Processing},
+  year={2017}
+}
+
+@INPROCEEDINGS{9005965,
+
+  author={Hasanzadeh, Arman and Liu, Xi and Duffield, Nick and Narayanan, Krishna R.},
+
+  booktitle={2019 IEEE International Conference on Big Data (Big Data)}, 
+
+  title={Piecewise Stationary Modeling of Random Processes Over Graphs With an Application to Traffic Prediction}, 
+
+  year={2019},
+
+  volume={},
+
+  number={},
+
+  pages={3779-3788},
+
+  doi={10.1109/BigData47090.2019.9005965}}
